quotes-service/kubernetes/chuck/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.dekorate.io/vcs-url: <<unknown>>
  labels:
    app.kubernetes.io/version: 0.0.4-SNAPSHOT
    app.kubernetes.io/name: chuck-quote-service
  name: chuck-quote-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 0.0.4-SNAPSHOT
      app.kubernetes.io/name: chuck-quote-service
  template:
    metadata:
      annotations:
        app.dekorate.io/vcs-url: <<unknown>>
      labels:
        app.kubernetes.io/version: 0.0.4-SNAPSHOT
        app.kubernetes.io/name: chuck-quote-service
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: QUOTE_SERVICE
              value: CHUCK
          image: gamussa/reactive-quote-service:0.0.4-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: chuck-quote-service
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
