quotes-service/kubernetes/chuck/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.dekorate.io/vcs-url: <<unknown>>
  labels:
    app.kubernetes.io/name: chuck-quote-service
    app.kubernetes.io/version: 0.0.2
  name: chuck-quote-service
spec:
  ports:
    - name: web
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: chuck-quote-service
    app.kubernetes.io/version: 0.0.2
