quotes-service/kubernetes/chuck/03_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chuck-quote-services
  annotations:
    konghq.com/strip-path: "true"
    external-dns.alpha.kubernetes.io/hostname: chuck.kongproxy.me
    #konghq.com/plugins: user1-auth,rate-paid-tier,platinum-paid-tier
spec:
  ingressClassName: kong
  rules:
    - host: chuck.kongproxy.me
      http:
        paths:
          - backend:
              service:
                name: chuck-quote-service
                port:
                  number: 8080
            pathType: ImplementationSpecific
